[project]
name = "zsynctech-studio-sdk"
version = "0.1.0"
description = "SDK Para interação de automações com a plataforma de monitoramento."
readme = "README.md"
authors = [
    { name = "ZSync Tech LTDA", email = "contato@zsynctech.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pika>=1.3.2",
    "pydantic>=2.11.7",
    "rich>=14.1.0",
    "uuid7>=0.1.0",
]

[project.scripts]
zsynctech-studio-sdk = "zsynctech_studio_sdk:master"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
